--- a/blogNext/package.json
+++ b/blogNext/package.json
@@ -9,16 +9,16 @@
   },
   "dependencies": {
     "@kangc/v-md-editor": "^1.7.11",
-    "@vitejs/plugin-vue2": "^2.2.0",
     "axios": "^1.4.0",
-    "element-ui": "^2.15.14",
+    "element-ui": "2.15.14",
     "highlight.js": "^11.8.0",
     "marked": "^7.0.4",
     "rimraf": "^5.0.1",
     "vite-plugin-imp": "^2.4.0",
-    "vue": "^2.7.14",
+    "vite-plugin-vue2": "^2.0.3",
+    "vue": "2.6.14",
     "vue-router": "^3.2.4",
-    "vue-template-compiler": "^2.7.14"
+    "vue-template-compiler": "2.6.14"
   },
   "devDependencies": {
     "prettier": "^3.0.2",
